--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^22.9.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.46",
