--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-DATABASE_URL_SATRIA="sqlserver://localhost:1433;database=database_name;username=your_account;password=your-password;trustServerCertificate=true;"
+DATABASE_URL_SATRIA="sqlserver://localhost:1433;database=template_database_backend;username=your_account;password=your-password;trustServerCertificate=true;"
 JWT_SECRET="secret-key"
